@@ -1,3 +1,7 @@
+2005-04-11  Mike Kestner  <mkestner@novell.com>
+
+	* gdk/Pixbuf.custom : fix out params on RenderPixmapAndMask* methods.
+
 2005-04-11  Dan Winship  <danw@novell.com>
 
 	* generator/ClassBase.cs (ParseImplements): record both managed
